--- a/templates/environment.html
+++ b/templates/environment.html
@@ -15,6 +15,9 @@
     <aside>
         <p>There</p>
     </aside>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"
+        integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA=="
+        crossorigin="anonymous"></script>
     <script href="../static.environment.js"></script>
 </body>
 </html>
