--- a/static/environment.css
+++ b/static/environment.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     flex-grow: 1;
+    flex-basis: 0;
     font-size: 1.17em;
     color: rgb(190, 190, 190);
 }
@@ -18,11 +19,11 @@ body, html {
 main {
     display: flex;
     flex-direction: column;
-    flex-grow: 6;
+    flex-grow: 3;
 }
 
 canvas {
-    z-index: 100;
+    flex-grow: 1;
 }
 
 aside {
