--- a/static/environment.css
+++ b/static/environment.css
@@ -11,7 +11,6 @@
 body, html {
     width: 100%;
     height: 100%;
-    overflow:hidden;
     display: flex;
     background-color: rgb(18, 18, 18);
 }
@@ -19,13 +18,16 @@ body, html {
 main {
     display: flex;
     flex-direction: column;
-    flex-grow: 3;
+    flex-grow: 8;
 }
 
 canvas {
-    flex-grow: 1;
+    width: 100%;
+    height: 100%;
 }
 
 aside {
+    flex-basis: 0;
+    flex-grow: 1;
     background-color: rgba(255, 255, 255, 0.05);
 }
