Added sending canvas data button to prevent spamming server with each update

--- a/templates/environment.html
+++ b/templates/environment.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <aside>
-        <p>Hello</p>
+        <button onclick="send_canvas_positions()">Send</button>
     </aside>
     <main id="camera_container">
-        <canvas id="camera_canvas"></canvas>
+        <canvas id="camera_canvas" ></canvas>
     </main>
     <aside>
         <p>There</p>
