Fixed button aligment within css

--- a/templates/environment.html
+++ b/templates/environment.html
@@ -7,13 +7,16 @@
 </head>
 <body>
     <aside>
-        <button onclick="send_canvas_positions()">Send</button>
+        <menu>
+            <li><button onclick="send_canvas_positions()">Send</button></li>
+            <li><button>Hello</button></li>
+        </menu>
     </aside>
     <main id="camera_container">
         <canvas id="camera_canvas" ></canvas>
     </main>
     <aside>
-        <p>There</p>
+        <p>Placeholder</p>
     </aside>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"
         integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA=="
