--- a/static/environment.css
+++ b/static/environment.css
@@ -2,8 +2,6 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    flex-grow: 1;
-    flex-basis: 0;
     font-size: 1.17em;
     color: rgb(190, 190, 190);
 }
@@ -24,10 +22,25 @@ main {
 canvas {
     width: 100%;
     height: 100%;
+    flex-grow: 1;
 }
 
 aside {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+    flex-wrap: wrap;
     flex-basis: 0;
     flex-grow: 1;
     background-color: rgba(255, 255, 255, 0.05);
+}
+
+menu {
+    list-style: none;
+}
+
+button {
+    background-color: rgba(255, 255, 255, 0.05);
+    border: none;
+    cursor: pointer;
 }
