--- a/templates/environment.html
+++ b/templates/environment.html
@@ -14,13 +14,9 @@
             <input id="height">
             <button onclick="resize_window(change_dimensions=true)">Update</button>
         </section>
-        <section>
-            <button onclick="send_canvas_positions()">Send</button>
-        </section>
-
-
     </aside>
     <main id="camera_container">
+        <p id="position"></p>
         <canvas id="camera_canvas" ></canvas>
     </main>
     <aside>
