Added an option to send data to the server

--- a/templates/environment.html
+++ b/templates/environment.html
@@ -13,6 +13,7 @@
             <label for="height">Height</label>
             <input id="height">
             <button class="clickable_button" onclick="resize_window(change_dimensions=true)">Update</button>
+            <button class="clickable_button" onclick="send_dictionary()">Send</button>
         </section>
     </aside>
     <main id="camera_container">
