--- a/static/environment.css
+++ b/static/environment.css
@@ -9,7 +9,7 @@ body, html {
     width: 100%;
     height: 100%;
     display: flex;
-    background-color: rgb(18, 18, 18);
+    background-color: rgb(3,9,18);
 }
 
 main {
@@ -52,6 +52,7 @@ section {
 
 #options {
     flex-wrap: wrap;
+    height: 12.5%;
 }
 
 label {
@@ -73,13 +74,15 @@ button {
 
 .wrapper {
     flex-basis: 25%;
+    width: 100%;
     height: 100%;
     padding: 2px;
 
 }
 
 .option {
-    flex-grow: 1;
+    height: 100%;
+    width: 100%;
     padding: 4px;
     border: solid black;
 }
