--- a/static/environment.css
+++ b/static/environment.css
@@ -25,7 +25,6 @@ main {
     user-select: none;
     pointer-events: none;
     z-index: 100;
-    color: rgb(180, 180, 255);
 }
 
 canvas {
@@ -51,8 +50,21 @@ section {
 }
 
 #options {
+    display: flex;
     flex-wrap: wrap;
-    height: 12.5%;
+}
+
+.wrapper {
+    display: flex;
+    flex-basis: 25%;
+}
+
+.option {
+    flex-grow: 1;
+    padding: 20px 0;
+    text-align: center;
+
+    border: solid black;
 }
 
 label {
@@ -72,17 +84,3 @@ button {
     background-color: inherit;
 }
 
-.wrapper {
-    flex-basis: 25%;
-    width: 100%;
-    height: 100%;
-    padding: 2px;
-
-}
-
-.option {
-    height: 100%;
-    width: 100%;
-    padding: 4px;
-    border: solid black;
-}
