--- a/templates/environment.html
+++ b/templates/environment.html
@@ -5,17 +5,18 @@
     <title>Title</title>
     <link rel="stylesheet" href="../static/environment.css">
 </head>
-<body   >
+<body>
     <aside>
+        <button class="collapsible">Canvas</button>
         <section id="controls">
             <label for="width">Width</label>
             <input id="width">
             <label for="height">Height</label>
             <input id="height">
-            <button class="clickable_button" onclick="environment.update_board()">Update</button>
+            <button onclick="environment.update_board()">Update</button>
             <label for="sampling_rate"></label>
             <input type="range" min="1" max="10" value="1" class="slider" id="sampling_rate" oninput="environment.sample()">
-            <button class="clickable_button" onclick="send_environment()">Place Cameras</button>
+            <button onclick="send_environment()">Place Cameras</button>
         </section>
     </aside>
     <main id="camera_container">
@@ -23,12 +24,11 @@
         <canvas id="camera_canvas" ></canvas>
     </main>
     <aside>
+        <button class="collapsible">Elements</button>
         <section id="options">
             {% for key in options %}
-                <section class="wrapper">
-                    <button class="option" onclick="environment.change_selected_type('{{key}}')"
-                            style="background-color:{{options[key]}}; color:{{complementary(options[key])}}">{{ key }}</button>
-                </section>
+                    <button class="option" value = '{{ key }}' onclick="environment.change_selected_type(this)"
+                            style="background-color:{{options[key]}}; color:{{complementary(options[key], 'rgb(255, 255, 255)')}}">{{ key }}</button>
             {% endfor %}
         </section>
     </aside>
@@ -38,6 +38,7 @@
     <script>
         let Colours = {{ options | tojson | safe }};
     </script>
+    <script src="/static/collapsible.js"></script>
     <script src="/static/environment.js"></script>
 </body>
 </html>
