--- a/static/environment.css
+++ b/static/environment.css
@@ -9,7 +9,7 @@ body, html {
     width: 100%;
     height: 100%;
     display: flex;
-    background-color: rgb(3,9,18);
+    background-color: #0B0C10;
 }
 
 main {
@@ -38,33 +38,46 @@ aside {
     flex-direction: column;
     flex-basis: 25%;
     flex-grow: 1;
-    background-color: rgba(255, 255, 255, 0.05);
+    background-color: #0B0C10;
 }
 
 section {
     display: flex;
-}
-
-#controls {
-    flex-direction: column;
-}
-
-#options {
-    display: flex;
     flex-wrap: wrap;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    padding: 0 4px;
+    background-color: #1F2833;
 }
 
-.wrapper {
-    display: flex;
-    flex-basis: 25%;
+.collapsible {
+    padding: 20px 0;
+    border:solid #45A29E 4px
+}
+
+.collapsible:hover {
+    border:solid #66FCF1 4px
+}
+
+.active_collapsible {
+    border:solid #66FCF1 4px
 }
 
 .option {
-    flex-grow: 1;
+    flex-basis: 100%;
     padding: 20px 0;
+    margin: 0 0 4px 0;
     text-align: center;
+    border: solid #0B0C10 4px;
+}
 
-    border: solid black;
+.option:hover {
+    border: solid #45A29E 4px;
+}
+
+.active_option {
+    border: solid #45A29E 4px;
 }
 
 label {
@@ -78,9 +91,8 @@ input {
 }
 
 button {
-    border: none;
     cursor: pointer;
-    flex-grow: 1;
-    background-color: inherit;
+    background-color: #0B0C10;
+    border: none;
 }
 
