--- a/static/environment.css
+++ b/static/environment.css
@@ -25,6 +25,7 @@ main {
     user-select: none;
     pointer-events: none;
     z-index: 100;
+    color: #0B0C10;
 }
 
 canvas {
@@ -52,6 +53,7 @@ section {
 }
 
 .collapsible {
+    font-size: 1.09em;
     padding: 20px 0;
     border:solid #45A29E 4px
 }
@@ -81,11 +83,16 @@ section {
 }
 
 label {
-    flex-grow: 1;
+    flex-basis: 100%;
+    font-size: 1.06em;
 }
 
 input {
-    background-color: rgba(255, 255, 255, 0.05);
+    background-color: rgba(255, 255, 255, 0.09);
+    flex-basis: 100%;
+    font-size: 1.06em;
+    border-radius: 8px;
+    padding: 8px 8px;
     border: none;
     outline: none;
 }
