--- a/static/environment.css
+++ b/static/environment.css
@@ -42,20 +42,24 @@ aside {
     background-color: #0B0C10;
 }
 
-section {
-    display: flex;
-    flex-wrap: wrap;
+.wrapper {
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
-    padding: 0 4px;
+}
+
+section {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 2px 4px;
     background-color: #1F2833;
 }
 
 .collapsible {
     font-size: 1.09em;
     padding: 20px 0;
-    border:solid #45A29E 4px
+    border:solid #45A29E 4px;
+    background-color: #0B0C10;
 }
 
 .collapsible:hover {
@@ -69,13 +73,18 @@ section {
 .option {
     flex-basis: 100%;
     padding: 20px 0;
-    margin: 0 0 4px 0;
+    margin: 2px 0;
     text-align: center;
     border: solid #0B0C10 4px;
+    border-radius: 8px;
 }
 
 .option:hover {
     border: solid #45A29E 4px;
+}
+
+.option:active {
+    border:solid #66FCF1 4px
 }
 
 .active_option {
@@ -85,10 +94,11 @@ section {
 label {
     flex-basis: 100%;
     font-size: 1.06em;
+    margin: 4px 0 4px 0;
 }
 
 input {
-    background-color: rgba(255, 255, 255, 0.09);
+    background-color: #333C46;
     flex-basis: 100%;
     font-size: 1.06em;
     border-radius: 8px;
@@ -99,7 +109,19 @@ input {
 
 button {
     cursor: pointer;
-    background-color: #0B0C10;
-    border: none;
+    background-color: #333C46;
 }
+
+.execute {
+    flex-basis: 100%;
+    padding: 8px 8px;
+    border-radius: 8px;
+    margin: 8px 0;
+    border: solid #0B0C10 4px;
+}
+
+.execute:hover {
+    border: solid #45A29E 4px;
+}
+
 
