--- a/static/environment.css
+++ b/static/environment.css
@@ -92,7 +92,8 @@ section {
 }
 
 label {
-    flex-basis: 100%;
+    flex-basis: 50%;
+    flex-grow: 1;
     font-size: 1.06em;
     margin: 4px 0 4px 0;
 }
