--- a/templates/environment.html
+++ b/templates/environment.html
@@ -7,6 +7,18 @@
 </head>
 <body>
     <aside>
+        <button class="collapsible">Information</button>
+        <div class="wrapper" id="information">
+            <section>
+                <p>Hover over any tile to see its attributes</p>
+                <output id="coordinates"></output>
+                <output id="type"></output>
+                <output id="range"></output>
+                <output id="fov"></output>
+                <output id="orientation"></output>
+                <output id="nodes"></output>
+            </section>
+        </div>
         <button class="collapsible">Canvas</button>
         <div class="wrapper">
             <section>
