--- a/static/environment.css
+++ b/static/environment.css
@@ -112,7 +112,7 @@ label {
     margin: 4px 0 4px 0;
 }
 
-input {
+input, select {
     background-color: #333C46;
     flex-basis: 100%;
     font-size: 1.06em;
