Added average score per camera

--- a/templates/environment.html
+++ b/templates/environment.html
@@ -10,6 +10,7 @@
         <button class="collapsible">Information</button>
         <div class="wrapper" id="information">
             <section>
+                <output id="score">Average Coverage per Camera: 0 %</output>
                 <p>Hover over any tile to see its attributes</p>
                 <output id="coordinates"></output>
                 <output id="type"></output>
