Added total coverage as a metric of performance

--- a/templates/environment.html
+++ b/templates/environment.html
@@ -10,7 +10,8 @@
         <button class="collapsible">Information</button>
         <div class="wrapper" id="information">
             <section>
-                <output id="score">Average Coverage per Camera: 0 %</output>
+                <output id="coverage">Total Coverage: 0 %</output>
+                <output id="coverage_per_camera">Average Coverage per Camera: 0 %</output>
                 <p>Hover over any tile to see its attributes</p>
                 <output id="coordinates"></output>
                 <output id="type"></output>
