Added a download function

--- a/templates/environment.html
+++ b/templates/environment.html
@@ -39,7 +39,7 @@
                 <button class="execute" onclick="environment.update_environment_based_on_files()">Update Environment</button>
                 <input id="camera_upload" type="file" class="file" accept=".txt"/>
                 <input id="sample_upload" type="file" class="file" accept=".txt"/>
-                <button class="execute">Download Environment</button>
+                <button class="execute" onclick="environment.download_environment()">Download Environment</button>
             </section>
         </div>
         <button class="collapsible">Sampling & Solver</button>
