--- a/templates/environment.html
+++ b/templates/environment.html
@@ -49,8 +49,9 @@
                 <input type="range" min="1" max="10" value="1" class="slider" id="sampling_rate" oninput="environment.sample()">
                 <label for="algorithm">Algorithm Selection: </label>
                 <select name="algorithm" id="algorithm">
-                    <option value="hill_climbing_algorithm">Hill Climbing Algorithm</option>
-                    <option value="genetic_algorithm">Genetic Algorithm</option>
+                    {% for key in algorithm_options %}
+                        <option value="{{ key }}">{{ capitalise(key) }}</option>
+                    {% endfor %}
                 </select>
                 <button onclick="send_environment()" class="execute">Place Cameras</button>
             </section>
@@ -64,9 +65,9 @@
         <button class="collapsible">Elements</button>
         <div class="wrapper">
             <section>
-                {% for key in options %}
+                {% for key in tile_options %}
                         <button class="option" value = '{{ key }}' id="{{ key }}" onclick="environment.change_selected_type(this)"
-                                style="background-color:{{options[key]}}; color:{{complementary(options[key], 'rgb(255, 255, 255)')}}">{{ key }}</button>
+                                style="background-color:{{tile_options[key]}}; color:{{complementary(tile_options[key], 'rgb(255, 255, 255)')}}">{{ key }}</button>
                 {% endfor %}
             </section>
         </div>
@@ -75,7 +76,7 @@
         integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA=="
         crossorigin="anonymous"></script>
     <script>
-        let Colours = {{ options | tojson | safe }};
+        let Colours = {{ tile_options | tojson | safe }};
     </script>
     <script src="/static/collapsible.js"></script>
     <script src="/static/environment.js"></script>
