Implemented separate file handling

--- a/templates/environment.html
+++ b/templates/environment.html
@@ -39,7 +39,7 @@
                 <button class="execute" onclick="document.getElementById('sample_upload').click()">Upload Samples</button>
                 <input id="sample_upload" type="file" class="file" accept=".txt"/>
                 <button class="execute" onclick="file_processor.update_environment()">Update Environment</button>
-                <button class="execute" onclick="environment.download_environment()">Download Environment</button>
+                <button class="execute" onclick="file_processor.download_environment()">Download Environment</button>
             </section>
         </div>
         <button class="collapsible">Sampling & Solver</button>
