Removed width and height. Started using size parameter

--- a/templates/environment.html
+++ b/templates/environment.html
@@ -24,10 +24,8 @@
         <button class="collapsible">Canvas</button>
         <div class="wrapper">
             <section>
-                <label for="width">Width</label>
-                <input id="width" autocomplete="off">
-                <label for="height">Height</label>
-                <input id="height" autocomplete="off">
+                <label for="size">Size</label>
+                <input id="size" autocomplete="off">
                 <button onclick="environment.update_board()" class="execute">Create New Canvas</button>
             </section>
         </div>
