--- a/templates/environment.html
+++ b/templates/environment.html
@@ -26,7 +26,7 @@
             <section>
                 <label for="size">Size</label>
                 <input id="size" autocomplete="off">
-                <button onclick="environment.update_board()" class="execute">Create New Canvas</button>
+                <button onclick="drawing_tool.create_board()" class="execute">Create New Canvas</button>
             </section>
         </div>
         <button class="collapsible">Files</button>
@@ -44,7 +44,7 @@
         <div class="wrapper">
             <section>
                 <label for="sampling_rate">Sampling Rate: </label>
-                <input type="range" min="1" max="10" value="1" class="slider" id="sampling_rate" oninput="environment.sample()">
+                <input type="range" min="1" max="10" value="1" class="slider" id="sampling_rate" oninput="drawing_tool.sample()">
                 <label for="algorithm">Algorithm Selection: </label>
                 <select name="algorithm" id="algorithm">
                     {% for key in algorithm_options %}
@@ -57,18 +57,26 @@
     </aside>
     <main id="camera_container">
         <p id="position"></p>
-        <canvas id="camera_canvas" ></canvas>
+        <canvas id="camera_canvas" oncontextmenu="return false"></canvas>
     </main>
     <aside>
         <button class="collapsible">Elements</button>
         <div class="wrapper">
             <section>
                 {% for key in tile_options %}
-                        <button class="option" value = '{{ key }}' id="{{ key }}" onclick="environment.change_selected_type(this)"
+                        <button class="option" value = '{{ key }}' id="{{ key }}" onclick="drawing_tool.change_selected_colour(this.id)"
                                 style="background-color:{{tile_options[key]}}; color:{{complementary(tile_options[key], 'rgb(255, 255, 255)')}}">{{ key }}</button>
                 {% endfor %}
             </section>
         </div>
+        <button class="collapsible">Tools</button>
+            <div class="wrapper">
+                <section>
+                        <button class="option active_drawing" id="POINT" onclick="drawing_tool.change_selected_drawing(this.id)">POINT</button>
+                        <button class="option" id="LINE" onclick="drawing_tool.change_selected_drawing(this.id)">LINE</button>
+                        <button class="option" id="FILL" onclick="drawing_tool.change_selected_drawing(this.id)">FILL</button>
+                </section>
+            </div>
     </aside>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"
         integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA=="
