Added option for cleaning cameras

--- a/templates/environment.html
+++ b/templates/environment.html
@@ -49,6 +49,7 @@
                     {% endfor %}
                 </select>
                 <button onclick="send_environment()" class="execute">Place Cameras</button>
+                <button onclick="drawing_tool.clean_board_of_cameras()" class="execute">Clear Cameras</button>
             </section>
         </div>
     </aside>
