--- a/templates/environment.html
+++ b/templates/environment.html
@@ -29,6 +29,14 @@
                 <button onclick="drawing_tool.create_board()" class="execute">Create New Canvas</button>
             </section>
         </div>
+        <button class="collapsible">Cameras</button>
+        <div class="wrapper">
+            <section>
+                <button class="execute">Add a New Camera</button>
+                <ul id="cameras">
+                </ul>
+            </section>
+        </div>
         <button class="collapsible">Files</button>
         <div class="wrapper">
             <section>
